examples/smlfmt-1.2.0/test/fail/bad-specs-1.sml

signature FOO =
  sig
    structure Module.Foo : FOO
  end
